--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script data-ad-client="ca-pub-4800690855807758" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta charset="utf-8" http-equiv="Access-Control-Allow-Origin">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>EasyTrans</title>
