--- a/templates/index.html
+++ b/templates/index.html
@@ -387,5 +387,6 @@
             });
         });
     </script>
+    <footer><a href="https://beian.miit.gov.cn/" target="_blank">晋ICP备20002895号</a></footer>
 </body>
 </html>
