--- a/templates/index.html
+++ b/templates/index.html
@@ -387,6 +387,6 @@
             });
         });
     </script>
-    <footer><a href="https://beian.miit.gov.cn/" target="_blank">晋ICP备20002895号</a></footer>
+    <div><footer style="width:100%;height:200px;bottom:0px;"><a href="https://beian.miit.gov.cn/" target="_blank">晋ICP备20002895号</a></footer></div>
 </body>
 </html>
