--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
             </div>
             <div class="layui-form-item">
                 <blockquote class="layui-elem-quote layui-col-sm11" style="font-size: small">
-                    <div><footer style="width:100%;height:200px;bottom:0px;"><a href="https://beian.miit.gov.cn/" target="_blank">晋ICP备20002895号</a></footer></div>
+                    <div><footer><a href="https://beian.miit.gov.cn/" target="_blank">晋ICP备20002895号</a></footer></div>
                 </blockquote>
             </div>
         </div>
