--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a href="#">本站公告</a></li>
             <li class="layui-nav-item"><a href="#">建议</a></li>
-            <li class="layui-nav-item">联系方式:zhtyyx@gmail.com</li>
+            <li class="layui-nav-item"><a href="#">联系方式:zhtyyx@gmail.com</a></li>
         </ul>
         {#        <ul class="layui-nav layui-layout-right">#}
         {#            <li class="layui-nav-item">#}
