--- a/templates/photo.html
+++ b/templates/photo.html
@@ -12,12 +12,11 @@
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo" style="font-size: x-large;font-family: Arial;">Hunter's Tools</div>
+        <div class="layui-logo" style="font-size: 20px;font-family: Arial;">Hunter's Tools</div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a href="http://zhtyyx.com/">论文翻译</a></li>
-            <li class="layui-nav-item"><a href="
-            photo_index">老照片修复</a></li>
+            <li class="layui-nav-item"><a href="http://127.0.0.1:8000/photo">老照片修复</a></li>
             <li class="layui-nav-item"><a href="#">联系方式:zhtyyx@gmail.com</a></li>
         </ul>
         {#        <ul class="layui-nav layui-layout-right">#}
@@ -36,92 +35,6 @@
     </div>
 
 
-    <div class="layui-body">
-        <!-- 内容主体区域 -->
-        <div style="padding: 15px;">
-            <div class="layui-card layui-form" style="font-size: larger">
-                <div class="layui-card-body layui-row layui-col-sm12 layui-col-space12">
-                    <div class="layui-form-item">
-                    </div>
-                    <div class="layui-form-item">
-                        <div class="layui-input-inline">
-                            <select id="trans_tools" name="city">
-{#                                <option value="3">必应</option>#}
-                                <option value="1">谷歌</option>
-                                <option value="2">有道</option>
-                                <option value="4">百度</option>
-                            </select>
-                        </div>
-
-                        <button onclick="trans()" class="layui-btn">立即翻译</button>
-                        <button onclick="correction()" class="layui-btn">格式矫正</button>
-                        <button onclick="reset()" type="reset" class="layui-btn layui-btn-primary">重置</button>
-
-
-                    </div>
-                    <div class="layui-form-item">
-                    </div>
-                    <div class="layui-col-sm11" style="padding: 20px; background-color: #F2F2F2;">
-                        <div class="layui-form-item">
-                            <div class=" layui-col-sm6">
-                                <textarea id="text_area" name="other" style="height: 180px;" placeholder="请在此输入要翻译的内容"
-                                          class="layui-textarea"></textarea>
-                            </div>
-                            <div class="layui-col-sm5" style="float: right;">
-                                <div class="layui-card">{{ error_msg }}
-                                    <textarea id="trans_area" name="trans_area" readonly="readonly"
-                                              style="height: 180px;"
-                                              placeholder="译文内容"
-                                              class="layui-textarea"></textarea>
-                                </div>
-                                <button class="layui-btn layui-btn-primary layui-btn-sm" onclick="copyContent()"
-                                        style="float: right;">copy
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="layui-col-md11">
-                <div class="layui-card">
-                    <div class="layui-card-header" style="font-size: larger">上传需要翻译的文件(当前仅限英译汉,且不支持OCR)</div>
-                    <div class="layui-card-body">
-                        <div class="layui-upload-drag" id="test-upload-drag">
-                            <i class="layui-icon"></i>
-                            <p>点击上传</p>
-                        </div>
-                        <div id="upload-list" class="layui-upload-list layui-hide">
-                            <table class="layui-table">
-                                <thead>
-                                <tr>
-                                    <th>文件名</th>
-                                    <th>大小</th>
-                                    <th>状态</th>
-                                    <th>操作</th>
-                                </tr>
-                                </thead>
-                                <tbody id="test-upload-demoList"></tbody>
-                            </table>
-                        </div>
-                        <div class="layui-form-item"></div><!--占位-->
-                        <div class="layui-input-inline">
-                            {#                            <button id="preview" class=" layui-btn " data-type="preview">在线预览</button>#}
-                            {#                            <button id="begain_trans" type="button" class="layui-btn">开始翻译</button>#}
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="layui-card-body layui-col-sm11">
-                <hr>
-            </div>
-            <div class="layui-form-item">
-                <blockquote class="layui-elem-quote layui-col-sm11" style="font-size: small">
-                    <div><footer><a href="https://beian.miit.gov.cn/" target="_blank">晋ICP备20002895号</a></footer></div>
-                </blockquote>
-            </div>
-        </div>
-    </div>
     <script src="{% static 'layui/layui.js' %}"></script>
     <script src="{% static 'js/jquery-2.1.3.min.js' %}"></script>
     <script>
@@ -225,7 +138,7 @@
         layui.use(['layer', 'form'], function () {
             var layer = layui.layer
                 , form = layui.form;
-            layer.msg('如有任何问题，随时联系：zhtyyx@gmail.com');//进入主页面的显示
+            layer.msg('Welcome to Hunter's tool!');//进入主页面的显示
         });
         //上传文件到后台,包括上传成功后的预览,翻译,删除,翻译完成后可以进行查看以及下载。
         var demoListView = $('#test-upload-demoList');
